[gd_scene load_steps=2 format=3 uid="uid://b51yfiiukcdq1"]

[ext_resource type="Script" uid="uid://4gjj6gwso8ty" path="res://scripts/user_form.gd" id="1_6sxfs"]

[node name="UserForm" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6sxfs")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
layout_direction = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Nombre:"

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Apellido:"

[node name="LastNameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "DNI:"

[node name="DNIInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
clip_contents = true
layout_direction = 3
layout_mode = 2

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Guardar"

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancelar"

[node name="KeyboardPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="KeyboardGrid" type="GridContainer" parent="VBoxContainer/KeyboardPanel"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
columns = 10
